force-app/main/default/objects/Quote/fields/Additional_Marking_On_Delivery_Rus__c.field-meta.xml
<CustomField>
    <fullName>Additional_Marking_On_Delivery_Rus__c</fullName>
    <label>Additional Marking On Delivery  (Rus)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>