force-app/main/default/objects/Quote/fields/Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms__c</fullName>
    <description>Additional terms and conditions. Includes default terms. If necessary, can be changed.</description>
    <label>Additional Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>