force-app/main/default/objects/Quote/fields/Additional_Terms_Wheels__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Wheels__c</fullName>
    <description>Additional terms and conditions for Wheels. Includes default terms. If necessary, can be changed.</description>
    <label>Additional Terms Wheels</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>