force-app/main/default/objects/Quote/fields/Additional_Terms_Wheels_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Wheels_Ukr__c</fullName>
    <description>Additional terms and conditions for Wheels in Ukrainian. Includes default terms. If necessary, can be changed.</description>
    <label>Additional Terms Wheels (Ukr)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>