force-app/main/default/objects/Quote/fields/BottomText__c.field-meta.xml
<CustomField>
    <fullName>BottomText__c</fullName>
    <description>Text that will appear in the bottom of PDF document.</description>
    <inlineHelpText>Text that will appear in the bottom of PDF document.</inlineHelpText>
    <label>Bottom Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>