force-app/main/default/objects/Quote/fields/ClientLead__c.field-meta.xml
<CustomField>
    <fullName>ClientLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Lead</label>
    <referenceTo>ClientLead__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>