force-app/main/default/objects/Quote/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <defaultValue>&quot;Ukraine&quot;</defaultValue>
    <description>Input country of origin. Ukraine by default</description>
    <label>Country of Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>