force-app/main/default/objects/Quote/fields/Created_from_Flow__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Flow</label>
    <type>Checkbox</type>
</CustomField>