force-app/main/default/objects/Quote/fields/Created_From_OPA_process__c.field-meta.xml
<CustomField>
    <fullName>Created_From_OPA_process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From OPA process</label>
    <type>Checkbox</type>
</CustomField>