force-app/main/default/objects/Quote/fields/HeaderText__c.field-meta.xml
<CustomField>
    <fullName>HeaderText__c</fullName>
    <description>Text that will appear in the top of the PDF document.</description>
    <inlineHelpText>Text that will appear in the top of the PDF document.</inlineHelpText>
    <label>Header Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>