force-app/main/default/objects/Quote/fields/Interpipe_Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Interpipe_Bank_Details__c</fullName>
    <description>Include Bank Details if necessary</description>
    <inlineHelpText>Remove or Include Bank Details if necessary</inlineHelpText>
    <label>Interpipe Bank Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>