force-app/main/default/objects/Quote/fields/Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Invoicing__c</fullName>
    <label>Invoicing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>