force-app/main/default/objects/Quote/fields/Marking__c.field-meta.xml
<CustomField>
    <fullName>Marking__c</fullName>
    <description>Description of marking for pipes</description>
    <inlineHelpText>Please change if necessary.</inlineHelpText>
    <label>Marking</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>