force-app/main/default/objects/Quote/fields/Marking_Rus__c.field-meta.xml
<CustomField>
    <fullName>Marking_Rus__c</fullName>
    <description>Description of marking for pipes in Russian</description>
    <inlineHelpText>Please change if necessary.</inlineHelpText>
    <label>Marking (Rus)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>