force-app/main/default/objects/Quote/fields/Marking_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Marking_Ukr__c</fullName>
    <description>Description of marking for pipes in Ukrainian</description>
    <inlineHelpText>Please change if necessary.</inlineHelpText>
    <label>Marking (Ukr)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>