force-app/main/default/objects/Quote/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <description>Information about packing requirements for pipes</description>
    <inlineHelpText>Please change if necessary.</inlineHelpText>
    <label>Packing</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>