force-app/main/default/objects/Quote/fields/Packing_Rus__c.field-meta.xml
<CustomField>
    <fullName>Packing_Rus__c</fullName>
    <description>Information about packing requirements for pipes in Russian</description>
    <inlineHelpText>Please change if necessary.</inlineHelpText>
    <label>Packing (Rus)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>