force-app/main/default/objects/Quote/fields/Packing_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Packing_Ukr__c</fullName>
    <description>Information about packing requirements for pipes in Ukrainian</description>
    <inlineHelpText>Please change if necessary.</inlineHelpText>
    <label>Packing (Ukr)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>