force-app/main/default/objects/Quote/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Your Opportunity Payment Terms will appear after you save your new Quote. If you want to change Payment terms you can do it in Opportunity or fill Payment Terms field.</inlineHelpText>
    <label>Payment Terms</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PaymentTerms__c.Obsolete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PaymentTerms__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>