force-app/main/default/objects/Quote/fields/Plastic_Caps_Rus__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Caps_Rus__c</fullName>
    <label>Plastic Caps  (Rus)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>