force-app/main/default/objects/Quote/fields/Plastic_Caps_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Caps_Ukr__c</fullName>
    <label>Plastic Caps (Ukr)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>