force-app/main/default/objects/Quote/fields/PriceApprovalRequest__c.field-meta.xml
<CustomField>
    <fullName>PriceApprovalRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Approval Request</label>
    <referenceTo>PriceApprovalRequest__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>