force-app/main/default/objects/Quote/fields/Production_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Production_Delivery__c</fullName>
    <inlineHelpText>Your Opportunity latest CDD Date will appear here after you save the Quote. If needed, you may change Date in the Production/Delivery Field.</inlineHelpText>
    <label>Production/Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>