force-app/main/default/objects/Quote/fields/Production_Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>Production_Delivery_Details__c</fullName>
    <label>Production/Delivery Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>