force-app/main/default/objects/Quote/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <label>Protection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>