force-app/main/default/objects/Quote/fields/RevisionNumber__c.field-meta.xml
<CustomField>
    <fullName>RevisionNumber__c</fullName>
    <description>Revision number of quote (auto increments when PDF is created).</description>
    <inlineHelpText>Revision number of quote (auto increments when PDF is created).</inlineHelpText>
    <label>Revision No.</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>