force-app/main/default/objects/Quote/fields/ShippingMarks__c.field-meta.xml
<CustomField>
    <fullName>ShippingMarks__c</fullName>
    <inlineHelpText>Please change, if necessary</inlineHelpText>
    <label>Shipping Marks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>