force-app/main/default/objects/Quote/fields/Special_Shipping_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Shipping_Requirements__c</fullName>
    <description>Shipping requirements by default. But can be changed if necessary.</description>
    <label>Special Shipping Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>