force-app/main/default/objects/Quote/fields/Third_Party_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Inspection__c</fullName>
    <description>Information about Third Party Inspection for pipes</description>
    <label>Third Party Inspection</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>