force-app/main/default/objects/Quote/fields/Third_Party_Inspection_Rus__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Inspection_Rus__c</fullName>
    <description>Information about Third Party Inspection for pipes in Russian</description>
    <label>Third Party Inspection (Rus)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>