force-app/main/default/objects/Quote/fields/Third_Party_Inspection_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Inspection_Ukr__c</fullName>
    <description>Information about Third Party Inspection for pipes in Ukrainian</description>
    <label>Third Party Inspection (Ukr)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>