force-app/main/default/objects/Quote/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <description>Information regarding tolerance for pipe</description>
    <inlineHelpText>Please change if necessary.</inlineHelpText>
    <label>Tolerance</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>