force-app/main/default/objects/Quote/listViews/All_Quotes.listView-meta.xml
<ListView>
    <fullName>All_Quotes</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.OWNER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
    <sharedTo>
        <group>ADMIN</group>
        <group>SeniorManagementTeam</group>
    </sharedTo>
</ListView>